--- a/demo/cocoKeyboard/test.html
+++ b/demo/cocoKeyboard/test.html
@@ -17,8 +17,8 @@
 	      <input id="cocokey" type="text" class="form-control" placeholde r="Username">
 	    </div>
 	</div>
-	<script type="text/javascript" src="/jquery.min.js"></script>
-	<script type="text/javascript" src="/cocoKeyboard.js"></script>
+	<script type="text/javascript" src="./jquery.min.js"></script>
+	<script type="text/javascript" src="./cocoKeyboard.js"></script>
 	<script type="text/javascript">
 		$("#cocokey").cocoKeyboard();
 	</script>
