commit cocoKeyboard Demo

--- a/demo/cocoKeyboard/test.html
+++ b/demo/cocoKeyboard/test.html
@@ -10,7 +10,7 @@
 		<div class="jumbotron">
 	      <h1>Hello, js!</h1>
 	      <p>本示例是基于 jquery 实现的简单软键盘，点击下方输入框查看</p>
-	      <p><a class="btn btn-primary btn-lg" href="#" role="button">Github</a></p>
+	      <p><a class="btn btn-primary btn-lg" href="https://github.com/wodewone/jQuery-Virtul-Keboard" role="button">Github</a></p>
 	    </div>
 		<div class="input-group">
 	      <span class="input-group-addon">@</span>
