--- a/index.html
+++ b/index.html
@@ -333,7 +333,9 @@
 原始数据类型值 比如 Undefined, Null, Boolean, Number, String。
 引用类型值 也就是对象类型，比如 Object, Array, Function, Date等。
 
-不同类型在内存中的存储方式也不同例如：原始数据类型的数据在内存中是存储在
+不同类型在内存中的存储方式也不同
+
+原始数据类型的数据在内存中是存储在栈
           ...
 
           <div class="post-more-link text-center">
